--- a/ex056/index.html
+++ b/ex056/index.html
@@ -7,8 +7,7 @@
     <title></title>
 </head>
 <body>
-    <h1>Soma dos multiplos de 3 e 5</h1>
-    <button id="botao">Somar</button>
+    <h1>Soma de todos números abaixo de 1000 múltiplos de 3 e 5</h1>
 
     <div id="res"></div>
     <script src="index.js"></script>
